--- a/fonts.css
+++ b/fonts.css
@@ -1,27 +1,27 @@
 @font-face {
   font-family: 'NT Somic';
-  src: url('/public/fonts/NTSomic-Regular.woff2') format('woff2');
+  src: url('/public/fonts/NTSomic-Regular.ttf');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'NT Somic';
-  src: url('/public/fonts/NTSomic-Medium.woff2') format('woff2');
+  src: url('/public/fonts/NTSomic-Medium.ttf');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'NT Somic';
-  src: url('/public/fonts/NTSomic-Bold.woff2') format('woff2');
+  src: url('/public/fonts/NTSomic-Bold.ttf');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'NT Somic';
-  src: url('/public/fonts/NTSomic-Semibold.woff2') format('woff2');
+  src: url('/public/fonts/NTSomic-Semibold.ttf');
   font-weight: 800;
   font-style: normal;
 }
