--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,8 @@ body {
 
   line-height: 1.5;
   padding: min(5%, 20px) min(10%, 100px);
-
-  text-transform: lowercase;
+  
+  text-rendering: optimizeLegibility;
 }
 
 a {
@@ -66,6 +66,10 @@ img.avatar {
   border-radius: 50%;
   margin-left: 2rem;
   float: right;
+}
+
+h2 {
+  text-transform: uppercase;
 }
 
 @media (prefers-color-scheme: dark) {
