--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
   margin: 0 auto;
   color: #333;
 
-  line-height: 1.5;
+  line-height: 2;
   padding: min(5%, 20px) min(10%, 100px);
   
   text-rendering: optimizeLegibility;
@@ -24,14 +24,14 @@ a {
 }
 
 nav {
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
 
 nav span {
-  gap: 1rem;
+  gap: 0.5rem;
   display: flex;
 }
 
@@ -40,7 +40,7 @@ nav p {
 }
 
 nav span.fill {
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   flex-grow: 1;
 }
 
@@ -57,8 +57,8 @@ ul li:before {
 
 hr {
   border: 0;
-  border-top: 1px dashed currentColor;
-  margin: 2rem 0;
+  border-top: 1px dotted currentColor;
+  margin: 1.5rem 0;
   opacity: 0.2;
 }
 
@@ -70,6 +70,39 @@ img.avatar {
 
 h2 {
   text-transform: uppercase;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  flex-direction: column;
+}
+
+.project-card {
+  flex-basis: 45%;
+  flex-shrink: 1;
+  flex-grow: 1;
+  display: flex;
+  border: 1px solid color-mix( in srgb, currentColor 20%, transparent );
+  flex-direction: row;
+  padding: 1rem;
+  gap: 1rem;
+  align-items: center;
+
+  border-radius: 1rem;
+}
+
+.project-card b {
+  font-size: 1.25rem;
+}
+
+.project-card > img {
+  border-radius: 0.5rem;
+
+  aspect-ratio: 1;
+  height: 10rem;
+  width: 10rem;
 }
 
 @media (prefers-color-scheme: dark) {
