--- a/styles.css
+++ b/styles.css
@@ -55,13 +55,6 @@ ul li:before {
   margin-left: -20px;
 }
 
-hr {
-  border: 0;
-  border-top: 1px dotted currentColor;
-  margin: 1.5rem 0;
-  opacity: 0.2;
-}
-
 img.avatar {
   border-radius: 50%;
   margin-left: 2rem;
@@ -70,6 +63,16 @@ img.avatar {
 
 h2 {
   text-transform: uppercase;
+  padding: 1rem 0;
+  width: fit-content;
+}
+
+h2::after {
+  content: ' ';
+  display: block;
+  height: 1px;
+  width: 100%;
+  border-bottom: 1px solid color-mix( in srgb, currentColor 20%, transparent );
 }
 
 .projects {
@@ -84,7 +87,7 @@ h2 {
   flex-shrink: 1;
   flex-grow: 1;
   display: flex;
-  border: 1px solid color-mix( in srgb, currentColor 20%, transparent );
+  background-color: color-mix( in srgb, currentColor 5%, transparent );
   flex-direction: row;
   padding: 1rem;
   gap: 1rem;
