--- a/fonts.css
+++ b/fonts.css
@@ -25,3 +25,10 @@
   font-weight: 800;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Instrument Serif';
+  src: url('/public/fonts/InstrumentSerif-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
