--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,25 @@
 body {
-  font-family: "NT Somic", sans-serif;
-  font-size: 11pt;
-  background-color: #f0f0f0;
-
-  max-width: 820px;
+  font-family: "Inter", sans-serif;
+  background-color: #f5e9ce;
   width: 100%;
   margin: 0 auto;
-  color: #333;
+  color: #000;
 
   line-height: 2;
   padding: min(5%, 20px) min(10%, 100px);
   
   text-rendering: optimizeLegibility;
+}
+
+.serif {
+  font-family: "Instrument Serif", serif;
+  font-size: 1.25em; /* Optical match */
+}
+
+main {
+  width: 100%;
+  max-width: 720px;
+  margin: auto;
 }
 
 a {
@@ -23,16 +31,24 @@ a {
   box-sizing: border-box;
 }
 
-
-
 h1 {
-  font-size: 2rem;
+  font-size: 5rem !important;
+}
+
+a {
+  color: #dd5533;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 nav {
   padding: 0.5rem 0;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -50,104 +66,28 @@ nav span.fill {
   flex-grow: 1;
 }
 
-ul {
-  list-style: none;
-  padding: 0 20px;
-}
-
-ul li:before {
-  content: '-';
-  position: absolute;
-  margin-left: -20px;
-}
-
-img.avatar {
-  border-radius: 50%;
-  margin-left: 2rem;
-  float: right;
-}
-
-h2 {
-  text-transform: uppercase;
-  padding: 1rem 0;
-  width: fit-content;
-}
-
-h2::after {
-  content: ' ';
-  display: block;
-  height: 1px;
-  width: 100%;
-  border-bottom: 1px solid color-mix( in srgb, currentColor 20%, transparent );
-}
-
-.projects {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  flex-direction: row;
-}
-
-.project-card {
-  aspect-ratio: 1.5;
-  flex-basis: 45%;
-  flex-shrink: 1;
-  flex-grow: 1;
-  max-width: 50%;
-  display: flex;
-  background-color: color-mix( in srgb, currentColor 5%, transparent );
-  flex-direction: column;
-  padding: 1rem;
-  gap: 1rem;
-  align-items: center;
-
-  border-radius: 1rem;
-}
-
-.project-card b {
-  font-size: 1.25rem;
-}
-
-.project-card > img {
-  border-radius: 0.5rem;
-
-  height: 10rem;
-  width: 10rem;
-  width: 100%;
-
-  object-fit: cover;
-}
-
 .intro-container {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 
-  padding-bottom: 2rem;
-  margin-bottom: 2rem;
+  text-align: center;
 
-  border-bottom: 1px solid color-mix( in srgb, currentColor 20%, transparent );
+  height: 100vh;
+  margin-top: -100px;
 }
 
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #111;
-    color: #f0f0f0;
-  }
+.intro-container h1 {
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 600px) {
   nav {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0rem;
-    padding-bottom: 4rem;
+    display: none;
   }
 
-  img.avatar {
-    float: none;
-    height: 128px;
-    width: 128px;
-    margin: 0 auto;
-    display: block;
+  .intro-container {
+    margin-top: -50px;
   }
 }
