--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,17 @@ body {
   text-rendering: optimizeLegibility;
 }
 
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 -50vh 50vh 0 rgba(0, 0, 0, 0.05) inset;
+  z-index: -1;
+}
+
 .serif {
   font-family: "Instrument Serif", serif;
   font-size: 1.25em; /* Optical match */
