--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
   padding: min(5%, 20px) min(10%, 100px);
   
   text-rendering: optimizeLegibility;
+  letter-spacing: -0.025em;
 }
 
 body::before {
@@ -26,6 +27,7 @@ body::before {
 .serif {
   font-family: "Instrument Serif", serif;
   font-size: 1.25em; /* Optical match */
+  letter-spacing: 0;
 }
 
 main {
