--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont,  "Inter", sans-serif;
   height: 100vh;
   width: 100%;
   margin: 0 auto;
@@ -10,7 +10,6 @@ body {
   padding: min(5%, 20px) min(10%, 100px);
   
   text-rendering: optimizeLegibility;
-  letter-spacing: -0.0125em;
 }
 
 body::before {
